--- a/数学讨论笔记.md
+++ b/数学讨论笔记.md
@@ -1,4 +1,7 @@
 - [2018年6月5日 闫嘉琦 **Stolz公式**和**Cauchy命题**](#201865--stolzcauchy)
+- [2018年6月7日 张双双 **一致连续专题**](#201867)
+- [2018年6月9日 高子东 **数列专题**](#201869)
+- [2018年6月11日 闫嘉琦 **Riemann函数, 函数极限**](#2018611--riemann)
 
 ### 2018年6月5日 闫嘉琦 **Stolz公式**和**Cauchy命题**
 
@@ -78,3 +81,10 @@ $$\lim\limits_{x\to+\infty} \dfrac{f(x)}{x}=A.$$
 >   $$\lim\limits_{x\to+\infty} \dfrac{f(x)}{g(x)}=A.$$
 
 *P.S. 本题可以完全按照上一题的方法来做, 唯一的不同在于, $x_M$ 需满足的条件变为：$x_M=kT, k\in\mathbb{N}_{+}, x-x_M\in[M,M+T)$.*
+
+
+### 2018年6月7日 张双双 **一致连续专题**
+
+### 2018年6月9日 高子东 **数列专题**
+
+### 2018年6月11日 闫嘉琦 **Riemann函数, 函数极限**
