--- a/数学分析习题.tex
+++ b/数学分析习题.tex
@@ -5,7 +5,7 @@
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{amsfonts}
-%\usepackage[linkcolor=black]{hyperref}
+\usepackage[linkcolor=black]{hyperref}
 \usepackage{bm}
 \usepackage{amssymb}
 \usepackage{multicol}
